--- a/School/Portfolio.html
+++ b/School/Portfolio.html
@@ -23,9 +23,9 @@
             <h3 style="--i:10"><span class="text"></span></h3>
             <h4 style="--i:11">Parcours : <span class="note"></span></h4>
             <div class="home-sci">
-                <a href="#" style="--i:1"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100088889660454" style="--i:1"><i class='bx bxl-facebook'></i></a>
                 <a href="#" style="--i:2"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#" style="--i:3"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/MKL57/Programmation/tree/main/School" style="--i:3"><i class='bx bxl-github'></i></a>
             </div>
             <br>
             <br>
