--- a/School/Devoir/Connexion.html
+++ b/School/Devoir/Connexion.html
@@ -14,11 +14,11 @@
         </div>
         <div class="navbar">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="">Connexion</a></li>
+            <li><a href="Connexion.html">Connexion</a></li>
             <li><a href="Inscription.html">Inscription</a></li>
-            <li><a href="">Articles</a></li>
-            <li><a href="">Panier</a></li>
-            <li><a href="">Qui sommes-nous ?</a></li>
+            <li><a href="Articles.html">Articles</a></li>
+            <li><a href="Panier.html">Panier</a></li>
+            <li><a href="Personnel.html">Qui sommes-nous ?</a></li>
         </div>
     </header>
     <div class="container">
